--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -526,6 +526,7 @@ en:
   vehicle_maintenance_schedule_type_form_new_heading: "New Schedule Type"
   vehicle_maintenance_schedule_form_edit_heading: "Edit Schedule Type"
   show_all_compliances: "Show All?"
+  confirm_creating_next_maintenance_event: "Would you like to create next maintenance event?"
 
   #vehicle maintenance schedules
   new_vehicle_maintenance_schedule_link_text: "New"
