Inactivate customer for a date range

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -647,6 +647,7 @@ en:
   return_trip_pickup_time_no_earlier_than_outbound_trip_dropoff_time: "Pickup time should be no earlier than outbound trip's appointment time"
   dropff_time_later_than_pickup_time: "Appointment time should be no earlier than pickup time"
   violate_provider_min_time_gap: 'The gap between drop off time and pick up time violates the minimum gap setting (%{min_gap} minutes) by the provider (%{provider_name})'
+  customer_inactive_for_trip_date: "Customer is not active on the trip scheduled date."
   #monthlies
   monthlies_start_date: "Month"
   funding_source: "Funding Source"
