--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -529,6 +529,7 @@ en:
   vehicle_maintenance_schedule_type_form_submit: "Submit"
   vehicle_maintenance_schedule_type_delete_confirm: "Are you sure to delete this schedule type?"
   vehicle_maintenance_schedule_types: 'Maintenance Schedule Types'
+  no_vehicle_maintenance_schedule_type: 'No maintenance schedule type.'
   vehicle_maintenance_schedule_type_form_new_heading: "New Schedule Type"
   vehicle_maintenance_schedule_form_edit_heading: "Edit Schedule Type"
   show_all_compliances: "Show All?"
