Use simple_format for customer comments, add translations

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -159,6 +159,8 @@ en:
   funding_authorization_number_contact_info: 'Contact Info'
   add_funding_authorization_number: 'Add'
   add_funding_authorization_number_dialog_title: 'Add Funding Authorization Number'
+  customer_comments: 'Comments'
+  view_customer_comments_report: 'View Customer Comments Report'
   
   # Lookup tables
   add_value: "Add Value"
