Editors can add vendor lists, and admins can remove them

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -838,6 +838,8 @@ en:
   vendor_list_download: "Download Approved Vendors List"
   vendor_list: "Approved Vendors List"
   upload_vendor_list: "Upload Approved Vendors List"
+  no_vendor_list: "No Approved Vendor List has been uploaded"
+  remove_vendor_list_confirm: "Are you sure you want to remove the Approved Vendor List?"
 
   reports: "Reports"
   age_and_ethnicity_table_heading: "Unduplicated Age & Ethnicity Report"
