--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -390,6 +390,55 @@ en:
     one: "1 error prohibited this requirement from being saved"
     other: "%{count} errors prohibited this requirement from being saved"
 
+  # Vehicle compliances
+  legal_vehicle_compliances_heading: "Legal Requirements"
+  vehicle_requirement_template_field_label: 'Type'
+  vehicle_compliances_heading: "Compliance Events"
+  vehicle_compliances_add_link_title: "Add compliance event"
+  vehicle_legal_requirements_add_link_title: "Add legal requirement"
+  vehicle_compliances_empty: "No compliance events exist for this vehicle"
+  vehicle_compliance_delete_confirm: "Are you sure you want to delete this compliance event?"
+  vehicle_compliance_form_error:
+    one: "1 error prohibited this vehicle compliance from being saved"
+    other: "%{count} errors prohibited this vehicle compliance from being saved"
+  vehicle_compliance_form_new_heading: "New compliance event"
+  vehicle_compliance_form_edit_heading: "Edit compliance event"
+  vehicle_compliance_form_event: "Name"
+  vehicle_compliance_form_notes: "Notes"
+  vehicle_compliance_form_due_date: "Due Date"
+  vehicle_compliance_form_compliance_date: "Compliance Date"
+  vehicle_compliance_form_submit: "Save"
+
+  # Vehicle requirement templates
+  system_vehicle_requirement_templates_link_text: "System-wide Vehicle Requirements"
+  system_vehicle_requirement_templates_index_heading: "System-wide Vehicle Requirements"
+  provider_vehicle_requirement_templates_link_text: "Provider-specific Vehicle Requirements"
+  provider_vehicle_requirement_templates_index_heading: "Provider-specific Vehicle Requirements"
+  configure_provider_vehicle_requirement_templates: "Configure Provider Specific Vehicle Requirements"
+  vehicle_requirement_templates_link_text: "Vehicle Requirements"
+  vehicle_requirement_templates_index_heading: "Vehicle Requirements"
+  new_vehicle_requirement_template_link_text: "Create Vehicle Requirement"
+  new_vehicle_requirement_template_heading: "New Vehicle Requirement"
+  show_vehicle_requirement_template_heading: "Vehicle Requirement"
+  delete_vehicle_requirement_template_button: "Delete"
+  edit_vehicle_requirement_template_button: "Edit"
+  edit_vehicle_requirement_template_heading: "Edit Requirement"
+  delete_vehicle_requirement_template_confirm_button: "Confirm"
+  delete_vehicle_requirement_template_confirm: "Are you sure?"
+  delete_vehicle_requirement_template_confirm_heading: "You are about to delete '%{requirement_name}'"
+  delete_vehicle_requirement_template_heading: "Delete Requirement"
+  vehicle_requirement_template_name: 'Name'
+  vehicle_requirement_template_legal: 'Legal?'
+  vehicle_requirement_template_reoccuring: 'Reoccuring?'
+  vehicle_requirement_template_form_submit: 'Submit'
+  vehicle_requirement_templates_empty: 'No requirements exist'
+  vehicle_requirement_template_name_field_label: 'Name'
+  vehicle_requirement_template_legal_field_label: 'Legal?'
+  vehicle_requirement_template_reoccuring_field_label: 'Reoccuring?'
+  vehicle_requirement_template_form_error:
+    one: "1 error prohibited this requirement from being saved"
+    other: "%{count} errors prohibited this requirement from being saved"
+
   # Recurring Driver Compliance Events
   recurring_driver_compliances_link_text: "Recurring Driver Compliance Events"
   recurring_driver_compliances_index_heading: "Recurring Driver Compliance Events"
