Update locale [RPII-250]

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1131,7 +1131,7 @@ en:
   number_of_passengers_served: "Number of Passengers Served"
   modify_selected_runs: "Apply Action to Selected Runs"
   delete_run: "Delete"
-  cancel_run: "Unschedule"
+  cancel_run: "Cancel"
   confirm_runs_batch_cancel: "Are you sure you want to unschedule all selected runs?"
   confirm_runs_batch_delete: "Are you sure you want to delete all selected runs?"
   unavailable_warning_message: "System detected following warnings, would you still like to proceed?"
