--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -162,6 +162,8 @@ en:
   customer_comments_panel: "Customer Comments"
   customer_comments: 'Comments'
   view_customer_comments_report: 'View Customer Comments Report'
+  configure_provider_ada_questions: "Configure ADA Questions"
+  provider_ada_questions_link_text: "ADA Question Lookup Table"
   
   # Lookup tables
   add_value: "Add Value"
