--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1451,9 +1451,11 @@ en:
   run_table_header_start: 'Start'
   run_table_header_end: 'End'
   run_table_header_trips: 'Trips'
+  run_table_header_actions: 'Actions'
   run_trip_type_recurring: 'Recur'
   run_trip_type_daily: 'Daily'
   run_manifest_table_header_action: "Action"
+  run_manifest_table_header_actions: "Actions"
   run_manifest_table_header_customer: 'Customer'
   run_manifest_table_header_address: 'Address'
   run_manifest_table_header_driver_notified: "Driver Notified"
