Calculate point-to-point run distance [RPII-17]

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1130,11 +1130,18 @@ en:
   assigned_to: "Assigned to"
   new_run: 'New Run'
   run_tracking: "Tracking"
+  run_distance: "Distance"
   run_tracking_senior: "Senior"
   run_tracking_disabled: "Disabled"
   run_tracking_low_income: "Low Income"
   number_of_one_way_trips: "Number of One Way Trips"
   number_of_passengers_served: "Number of Passengers Served"
+  run_distance: "Distance"
+  run_distance_total: "Total Miles"
+  run_distance_deadhead_from_garage: "Deadhead from Garage"
+  run_distance_revenue_miles: "Revenue Miles"
+  run_distance_non_revenue_miles: "Non Revenue Miles"
+  run_distance_deadhead_to_garage: "Deadhead to Garage"
   modify_selected_runs: "Apply Action to Selected Runs"
   delete_run: "Delete"
   cancel_run: "Cancel"
