--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -999,6 +999,7 @@ en:
   donation_report_heading: "Reports: Donations"
   donation_report_submit: "Report"
   total_donations: "Total Donations"
+  unlinked_trip_count: "Unlinked Trip Count"
   donation_date: 'Date'
   donation_amount: 'Amount'
   donation_notes: 'Notes'
